Moved scrollbar onto the body itself which helps with page jank on loading and fixes scrollbar not working with theme

--- a/UI/Web/src/app/app.component.scss
+++ b/UI/Web/src/app/app.component.scss
@@ -1,5 +1,5 @@
 .content-wrapper {
-    padding: calc(56px) 10px 0;
+    padding: 0 10px 0;
     height: 100%;
 }
 
@@ -19,7 +19,7 @@
     }
 
     .content-wrapper {
-        padding: calc(56px) 10px 0;
+        padding: 0 10px 0;
         overflow: hidden;
 
         &.closed {
