--- a/UI/Web/src/theme/utilities/_global.scss
+++ b/UI/Web/src/theme/utilities/_global.scss
@@ -1,12 +1,16 @@
 // Global styles for the site. Keep this as small as possible
 
-html, body { height: 100%; }
+html, body { height: 100%; overflow: hidden; }
 body {
   margin: 0;
   font-family: var(--body-font-family);
   color: var(--body-text-color);
   color-scheme: var(--color-scheme);
+  max-height: 100%;
+  overflow-y: auto;
+  margin-top: 56px;
 }
+
 
 hr {
     background-color: var(--hr-color);
